revamp package management

--- a/templates/default/init_system/airflow-env.erb
+++ b/templates/default/init_system/airflow-env.erb
@@ -14,4 +14,4 @@
 
 <% if @is_upstart -%>
 <%= "export " -%>
-<% end -%>AIRFLOW_HOME="<%= @config["core"]["airflow_home"] %>"
+<% end -%>AIRFLOW_HOME="<%= @airflow_home %>"
