--- a/templates/airflow.cfg.erb
+++ b/templates/airflow.cfg.erb
@@ -1,3 +1,5 @@
+# -*- coding: utf-8 -*-
+#
 # ------------------------------------------------------------------------
 # ------------------------------------------------------------------------
 #
@@ -5,37 +7,6 @@
 #
 # ------------------------------------------------------------------------
 # ------------------------------------------------------------------------
-
-# -*- coding: utf-8 -*-
-#
-# Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
-#
-#   http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing,
-# software distributed under the License is distributed on an
-# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-# KIND, either express or implied.  See the License for the
-# specific language governing permissions and limitations
-# under the License.
-
-
-# This is the template for Airflow's default configuration. When Airflow is
-# imported, it looks for a configuration file at $AIRFLOW_HOME/airflow.cfg. If
-# it doesn't exist, Airflow uses this template to generate it by replacing
-# variables in curly braces with their global values from configuration.py.
-
-# Users should not modify this file; they should customize the generated
-# airflow.cfg instead.
-
-
-# ----------------------- TEMPLATE BEGINS HERE -----------------------
 
 [core]
 # The folder where your airflow pipelines live, most likely a
@@ -76,8 +47,8 @@ log_format = [%%(asctime)s] {{%%(filename)s:%%(lineno)d}} %%(levelname)s - %%(me
 simple_log_format = %%(asctime)s %%(levelname)s - %%(message)s
 
 # Log filename format
-log_filename_template = {{{{ ti.dag_id }}}}/{{{{ ti.task_id }}}}/{{{{ ts }}}}/{{{{ try_number }}}}.log
-log_processor_filename_template = {{{{ filename }}}}.log
+log_filename_template = {{ ti.dag_id }}/{{ ti.task_id }}/{{ ts }}/{{ try_number }}.log
+log_processor_filename_template = {{ filename }}.log
 dag_processor_manager_log_location = <%= @config['core']['dag_processor_manager_log_location'] %>
 
 # Hostname by providing a path to a callable, which will resolve the hostname
@@ -143,10 +114,10 @@ parallelism = <%= @config['core']['parallelism'] %>
 dag_concurrency = <%= @config['core']['dag_concurrency'] %>
 
 # Are DAGs paused by default at creation
-dags_are_paused_at_creation = True
+dags_are_paused_at_creation = <%= @config['core']['dags_are_paused_at_creation'] %>
 
 # The maximum number of active DAG runs per DAG
-max_active_runs_per_dag = <%= @config['core']['dags_are_paused_at_creation'] %>
+max_active_runs_per_dag = <%= @config['core']['max_active_runs_per_dag'] %>
 
 # Whether to load the examples that ship with Airflow. It's good to
 # get started, but you probably want to set this to False in a production
@@ -170,14 +141,14 @@ task_runner = StandardTaskRunner
 
 # If set, tasks without a `run_as_user` argument will be run with this user
 # Can be used to de-elevate a sudo user running Airflow when executing tasks
-default_impersonation =
+default_impersonation = hadoopetl
 
 # What security module to use (for example kerberos):
-security =
+security = <%= @config['core']['security'] %>
 
 # If set to False enables some unsecure features like Charts and Ad Hoc Queries.
 # In 2.0 will default to True.
-secure_mode = False
+secure_mode = <%= @config['core']['secure_mode'] %>
 
 # Turn unit test mode on (overwrites many configuration options with test
 # values at runtime)
@@ -299,6 +270,9 @@ expose_config = <%= @config['webserver']['expose_config'] %>
 # Set to true to turn on authentication:
 # https://airflow.apache.org/security.html#web-authentication
 authenticate = <%= @config['webserver']['authenticate'] %>
+
+# Added manually
+auth_backend = <%= @config['webserver']['auth_backend'] %>
 
 # Filter the list of dags by owner name (requires authentication to be enabled)
 filter_by_owner = <%= @config['webserver']['filter_by_owner'] %>
@@ -510,7 +484,7 @@ print_stats_interval = 30
 # This is used by the health check in the "/health" endpoint
 scheduler_health_check_threshold = 30
 
-child_process_log_directory = {AIRFLOW_HOME}/logs/scheduler
+child_process_log_directory = <%= node["airflow"]["home"] %>/logs/scheduler
 
 # Local task jobs periodically heartbeat to the DB. If the job has
 # not heartbeat in this many seconds, the scheduler will mark the
@@ -555,17 +529,17 @@ use_job_schedule = True
 
 [ldap]
 # set this to ldaps://<your.ldap.server>:<port>
-uri =
-user_filter = objectClass=*
-user_name_attr = uid
-group_member_attr = memberOf
-superuser_filter =
-data_profiler_filter =
-bind_user = cn=Manager,dc=example,dc=com
-bind_password = insecure
-basedn = dc=example,dc=com
-cacert = /etc/ca/ldap_ca.crt
-search_scope = LEVEL
+uri = <%= @config['ldap']['uri'] %>
+user_filter = <%= @config['ldap']['user_filter'] %>
+user_name_attr = <%= @config['ldap']['user_name_attr'] %>
+group_member_attr = <%= @config['ldap']['group_member_attr'] %>
+superuser_filter = <%= @config['ldap']['superuser_filter'] %>
+data_profiler_filter = <%= @config['ldap']['data_profiler_filter'] %>
+bind_user = <%= @config['ldap']['bind_user'] %>
+bind_password = <%= @config['ldap']['bind_password'] %>
+basedn = <%= @config['ldap']['basedn'] %>
+cacert = <%= @config['ldap']['cacert'] %>
+search_scope = <%= @config['ldap']['search_scope'] %>
 
 # This setting allows the use of LDAP servers that either return a
 # broken schema, or do not return a schema.
@@ -614,12 +588,12 @@ authenticate = False
 # docker_image_slave = puckel/docker-airflow
 
 [kerberos]
-ccache = /tmp/airflow_krb5_ccache
+ccache = <%= @config["kerberos"]["ccache"] %>
 # gets augmented with fqdn
-principal = airflow
+principal = <%= @config["kerberos"]["principal"] %>
 reinit_frequency = 3600
 kinit_path = kinit
-keytab = airflow.keytab
+keytab = <%= @config["kerberos"]["keytab"] %>
 
 
 [github_enterprise]
