--- a/templates/default/init_system/systemd/airflow-scheduler.service.erb
+++ b/templates/default/init_system/systemd/airflow-scheduler.service.erb
@@ -20,8 +20,9 @@ After=network.target
 EnvironmentFile=<%= @env_path %>
 User=<%= @user %>
 Group=<%= @group %>
-ExecStart=<%= @bin_path %>/airflow scheduler --pid <%= @run_path %>/airflow-scheduler.pid
+ExecStart=<%= @home_path %>/airflow_runner.sh scheduler --pid <%= @run_path %>/airflow-scheduler.pid --run-duration ${SCHEDULER_DURATION}
 Restart=always
+RestartSec=5s
 
 [Install]
 WantedBy=multi-user.target
