incude java_too_options in environment

--- a/templates/default/init_system/airflow-env.erb
+++ b/templates/default/init_system/airflow-env.erb
@@ -15,3 +15,4 @@
 AIRFLOW_HOME="<%= @airflow_home %>"
 SCHEDULER_DURATION="<%= @scheduler_duration %>"
 SCHEDULER_RUNS="<%= @scheduler_runs %>"
+JAVA_TOOL_OPTIONS=-Djavax.security.auth.useSubjectCredsOnly=false
